# RepPanel_ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  duet_serial.txt  example_response.json  filament_response.json  file_info.json  macro_response.json  message_response.json  partitions.csv  reprap_status_2.json  sdkconfig  sdkconfig.old  sdkconfig_ERTFT_WIFI  sdkconfig_ERTFT_WIFI_esp_idf_40  sdkconfig_HWv2_esp_idf_43
.github/workflows/: build_ili9488_wifi.yml  build_supported_platforms.yml
case/: reppanelcover_back_v1_3.stl  reppanelcover_front_v1_3.stl
debug_responses/RRF3_0_0/: dwc2_config.json  printing.json
debug_responses/RRF3_1_0/: d99fn.json  dwc-settings.json  file_info.json  job.json  macro_response.json  move.json  state.json
main/: CMakeLists.txt  Kconfig  duet_status_json.h  esp32_settings.c  esp32_settings.h  esp32_uart.c  esp32_uart.h  esp32_wifi.c  esp32_wifi.h  lv_conf_back.h  main.c  main.h  reppanel.c  reppanel.h  reppanel_console.c  reppanel_console.h  reppanel_helper.c  reppanel_helper.h  reppanel_img_decoder.c  reppanel_img_decoder.h  reppanel_info.c  reppanel_info.h  reppanel_jobselect.c  reppanel_jobselect.h  reppanel_jobstatus.c  reppanel_jobstatus.h  reppanel_machine.c  reppanel_machine.h  reppanel_macros.c  reppanel_macros.h  reppanel_process.c  reppanel_process.h  reppanel_request.c  reppanel_request.h  reppanel_settings.c  reppanel_settings.h  request.c  request.h  rrf3_object_model_parser.c  rrf3_object_model_parser.h  (+4 more)
main/custom_theme/: lv_theme_rep_panel_light.c  lv_theme_rep_panel_light.h
main/custom_themes/: lv_theme_rep_panel_dark.c  lv_theme_rep_panel_dark.h  lv_theme_rep_panel_light.c  lv_theme_rep_panel_light.h
main/fonts/: reppanel_font_roboto_bold_16.c  reppanel_font_roboto_bold_18.c  reppanel_font_roboto_bold_22.c  reppanel_font_roboto_bold_24.c  reppanel_font_roboto_light_22.c  reppanel_font_roboto_light_26.c  reppanel_font_roboto_light_36.c  reppanel_font_roboto_regular_22.c  reppanel_font_roboto_regular_26.c  reppanel_font_roboto_regular_percent_40.c  reppanel_font_roboto_thin_numeric_160.c
main/images/: arrowgoleft.c  arrowgoright.c  away_icon.c  chamber_tmp.c  closer_icon.c  consolebutton.c  elapsed_time.c  info_icon.c  job_icon.c  layers.c  machine_icon.c  macro_icon.c  mainmenubutton.c  pause.c  play.c  process_icon.c  remaining_clock.c  stop.c
